syntax = "proto3";

package imfun.comet;

option go_package = "github.com/zhixunjie/im-fun/api/pb;../pb";

import "protocol.proto";

service Comet {
  // send msg with user keys
  rpc SendToUserKeys(SendToUserKeysReq) returns (SendToUserKeysReply);
  // send msg with room's user
  rpc SendToRoom(SendToRoomReq) returns (SendToRoomReply);
  // send msg with every user
  rpc SendToAll(SendToAllReq) returns (SendToAllReply);
  // get all rooms
  rpc GetAllRoomId(GetAllRoomIdReq) returns (GetAllRoomIdReply);
}

// users
message SendToUserKeysReq {
  repeated string userKeys = 1;
  imfun.protocol.Proto proto = 2;
  int32 subId = 3;
}

message SendToUserKeysReply {}

// all users
message SendToAllReq{
  imfun.protocol.Proto proto = 1;
  int32 subId = 2;
  int32 speed = 3;
}

message SendToAllReply{}

// room users
message SendToRoomReq {
  string roomId = 1;
  imfun.protocol.Proto proto = 2;
  int32 subId = 3;
}

message SendToRoomReply{}

// room's
message GetAllRoomIdReq{}

message GetAllRoomIdReply {
  map<string, bool> rooms = 1;
}
